<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.bevesttech.bevest.ui.beranda.BerandaBusinessFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_beranda_business" />

    <fragment
        android:id="@+id/navigation_inkubasi"
        android:name="com.bevesttech.bevest.ui.inkubasi.InkubasiFragment"
        android:label="@string/inkubasi"
        tools:layout="@layout/fragment_inkubasi" />

    <fragment
        android:id="@+id/navigation_bisnis"
        android:name="com.bevesttech.bevest.ui.business.BusinessFragment"
        android:label="@string/bisnis"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bevesttech.bevest.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>