<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.businessowner.businessdataregistration.BusinessDataOptionalFragment">

    <TextView
        android:id="@+id/tv_question"
        style="@style/BevestDesign.Typography.BodySemiBold2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_bisnis_penunjang" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dokumen_kredit"
        style="@style/BevestDesign.Component.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_dokumen_kredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah_dokumen_kredit"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textAppearance="@style/BevestDesign.Typography.Body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_website"
        style="@style/BevestDesign.Component.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/website_opsional"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:maxLines="1"
            android:textAppearance="@style/BevestDesign.Typography.Body1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_media_sosial"
        style="@style/BevestDesign.Component.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_media_sosial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/media_sosial_opsional"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textAppearance="@style/BevestDesign.Typography.Body1" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.appcompat.widget.LinearLayoutCompat>